# automacao-de-processos-com-ETL

./: .gitignore  README.md  automacao-etl-imdb.ipynb  etl_imdb.py  pyproject.toml  run.sh
rundeck_logs/: main.py
src/: extract.py  load.py  transform.py  view.py
src/config/: config.py
